--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -9,32 +9,50 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>733</width>
-    <height>383</height>
+    <width>953</width>
+    <height>687</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
      <widget class="QGroupBox" name="verticalGroupBox_3">
-      <layout class="QGridLayout" name="gridLayout_2">
-       <item row="0" column="0">
-        <widget class="QSplitter" name="splitter">
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QSplitter" name="splitter_2">
          <property name="orientation">
-          <enum>Qt::Vertical</enum>
+          <enum>Qt::Horizontal</enum>
          </property>
-         <property name="handleWidth">
-          <number>4</number>
-         </property>
-         <widget class="Renderer" name="widget" native="true">
-          <property name="layoutDirection">
-           <enum>Qt::LeftToRight</enum>
+         <widget class="QTreeView" name="sceneTree"/>
+         <widget class="QSplitter" name="splitter">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
           </property>
+          <widget class="Renderer" name="sceneRender" native="true">
+           <property name="layoutDirection">
+            <enum>Qt::LeftToRight</enum>
+           </property>
+          </widget>
+          <widget class="QListView" name="foldersView"/>
          </widget>
-         <widget class="QListView" name="listView"/>
+         <widget class="QScrollArea" name="objectProperties">
+          <property name="widgetResizable">
+           <bool>true</bool>
+          </property>
+          <widget class="QWidget" name="scrollAreaWidgetContents">
+           <property name="geometry">
+            <rect>
+             <x>0</x>
+             <y>0</y>
+             <width>204</width>
+             <height>606</height>
+            </rect>
+           </property>
+          </widget>
+         </widget>
         </widget>
        </item>
       </layout>
@@ -47,12 +65,36 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>733</width>
-     <height>22</height>
+     <width>953</width>
+     <height>21</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionNew_Project"/>
+    <addaction name="actionOpen_Project"/>
+    <addaction name="actionSave_Project"/>
+   </widget>
+   <addaction name="menuFile"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionNew_Project">
+   <property name="text">
+    <string>New Project</string>
+   </property>
+  </action>
+  <action name="actionOpen_Project">
+   <property name="text">
+    <string>Open Project</string>
+   </property>
+  </action>
+  <action name="actionSave_Project">
+   <property name="text">
+    <string>Save Project</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
