--- a/newproject.ui
+++ b/newproject.ui
@@ -7,19 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>584</width>
-    <height>124</height>
+    <height>135</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>0</y>
      <width>559</width>
-     <height>111</height>
+     <height>121</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
